added data and data process script

--- a/finance_data_clean.ipynb
+++ b/finance_data_clean.ipynb
@@ -4,17 +4,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:25.980781Z",
-     "start_time": "2023-11-15T03:09:25.928718Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "import altair as alt\n",
+    "import os\n",
+    "import shutil\n",
     "alt.data_transformers.enable(\"vegafusion\")"
    ]
   },
@@ -37,10 +34,6 @@
    "execution_count": null,
    "id": "323cfa1b5987286e",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.342374Z",
-     "start_time": "2023-11-15T03:09:25.937069Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -53,8 +46,8 @@
     "                         .history(start='1950-01-01', end='2023-11-01')\n",
     "                         .loc[:, 'Close'])\n",
     "gspc_raw_s.name = 'gspc'\n",
-    "gspc_raw_s.index.name = 'date'\n",
     "gspc_raw_s.index = pd.DatetimeIndex(gspc_raw_s.index.date)\n",
+    "gspc_raw_s.index.name = 'date'\n",
     "gspc_raw_s.head()"
    ]
   },
@@ -63,10 +56,6 @@
    "execution_count": null,
    "id": "577c76797248a397",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.342536Z",
-     "start_time": "2023-11-15T03:09:26.340037Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -95,10 +84,6 @@
    "execution_count": null,
    "id": "d77219431c56b1fe",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.354767Z",
-     "start_time": "2023-11-15T03:09:26.348026Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -115,10 +100,6 @@
    "execution_count": null,
    "id": "21f6de511bd5bb76",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.354907Z",
-     "start_time": "2023-11-15T03:09:26.352272Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -147,10 +128,6 @@
    "execution_count": null,
    "id": "59b60c3e535b3efb",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.367750Z",
-     "start_time": "2023-11-15T03:09:26.359962Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -182,10 +159,6 @@
    "execution_count": null,
    "id": "98be772fe203a5b8",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.368032Z",
-     "start_time": "2023-11-15T03:09:26.362102Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -214,10 +187,6 @@
    "execution_count": null,
    "id": "7b669d2818610a3d",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.368164Z",
-     "start_time": "2023-11-15T03:09:26.364627Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -235,10 +204,6 @@
    "execution_count": null,
    "id": "25e60db894f9353d",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.370298Z",
-     "start_time": "2023-11-15T03:09:26.367182Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -254,10 +219,6 @@
    "execution_count": null,
    "id": "f2546c8d8a2e7a48",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.376929Z",
-     "start_time": "2023-11-15T03:09:26.370483Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -275,10 +236,6 @@
    "execution_count": null,
    "id": "a71ae89d81e5a05d",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.377136Z",
-     "start_time": "2023-11-15T03:09:26.372073Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -308,10 +265,6 @@
    "execution_count": null,
    "id": "6469d3b908c2be65",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.667196Z",
-     "start_time": "2023-11-15T03:09:26.375445Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -343,10 +296,6 @@
    "execution_count": null,
    "id": "1c632577820ec2e5",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.675702Z",
-     "start_time": "2023-11-15T03:09:26.666903Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -377,10 +326,6 @@
    "execution_count": null,
    "id": "ce210bfb8fea754c",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.685370Z",
-     "start_time": "2023-11-15T03:09:26.683904Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -412,10 +357,6 @@
    "execution_count": null,
    "id": "561ce73bc3f9ce8d",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.701146Z",
-     "start_time": "2023-11-15T03:09:26.688410Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -444,10 +385,6 @@
    "execution_count": null,
    "id": "c58241d77ebd08d5",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.701463Z",
-     "start_time": "2023-11-15T03:09:26.691510Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -465,10 +402,6 @@
    "execution_count": null,
    "id": "ec08e2d68e23d22b",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.701565Z",
-     "start_time": "2023-11-15T03:09:26.694590Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -497,10 +430,6 @@
    "execution_count": null,
    "id": "e226640008562f76",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.701650Z",
-     "start_time": "2023-11-15T03:09:26.697936Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -519,10 +448,6 @@
    "execution_count": null,
    "id": "c8436d6d4b188417",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:26.702716Z",
-     "start_time": "2023-11-15T03:09:26.700356Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -552,10 +477,6 @@
    "execution_count": null,
    "id": "630613a017719d9b",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.444577Z",
-     "start_time": "2023-11-15T03:09:26.702795Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -563,12 +484,12 @@
    },
    "outputs": [],
    "source": [
-    "rate_raw_s: pd.Series = (pd.read_csv('https://fred.stlouisfed.org/graph/fredgraph.csv?bgcolor=%23e1e9f0&chart_type=line&drp=0&fo=open%20sans&graph_bgcolor=%23ffffff&height=450&mode=fred&recession_bars=on&txtcolor=%23444444&ts=12&tts=12&width=1318&nt=0&thu=0&trc=0&show_legend=yes&show_axis_titles=yes&show_tooltip=yes&id=DFF&scale=left&cosd=1954-07-01&coed=2023-11-08&line_color=%234572a7&link_values=false&line_style=solid&mark_type=none&mw=3&lw=2&ost=-99999&oet=99999&mma=0&fml=a&fq=Daily%2C%207-Day&fam=avg&fgst=lin&fgsnd=2020-02-01&line_index=1&transformation=lin&vintage_date=2023-11-11&revision_date=2023-11-11&nd=1954-07-01', parse_dates=['DATE'])\n",
-    "                         .set_index('DATE')\n",
-    "                         .squeeze())\n",
-    "rate_raw_s.index.name = 'date'\n",
-    "rate_raw_s.name = 'interest_rate_pct'\n",
-    "rate_raw_s.head()"
+    "interest_rate_raw_s: pd.Series = (pd.read_csv('https://fred.stlouisfed.org/graph/fredgraph.csv?bgcolor=%23e1e9f0&chart_type=line&drp=0&fo=open%20sans&graph_bgcolor=%23ffffff&height=450&mode=fred&recession_bars=on&txtcolor=%23444444&ts=12&tts=12&width=1318&nt=0&thu=0&trc=0&show_legend=yes&show_axis_titles=yes&show_tooltip=yes&id=DFF&scale=left&cosd=1954-07-01&coed=2023-11-08&line_color=%234572a7&link_values=false&line_style=solid&mark_type=none&mw=3&lw=2&ost=-99999&oet=99999&mma=0&fml=a&fq=Daily%2C%207-Day&fam=avg&fgst=lin&fgsnd=2020-02-01&line_index=1&transformation=lin&vintage_date=2023-11-11&revision_date=2023-11-11&nd=1954-07-01', parse_dates=['DATE'])\n",
+    "                                  .set_index('DATE')\n",
+    "                                  .squeeze())\n",
+    "interest_rate_raw_s.index.name = 'date'\n",
+    "interest_rate_raw_s.name = 'interest_rate_pct'\n",
+    "interest_rate_raw_s.head()"
    ]
   },
   {
@@ -589,10 +510,6 @@
    "execution_count": null,
    "id": "351b968a2ddbac75",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.451900Z",
-     "start_time": "2023-11-15T03:09:27.439693Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -600,7 +517,7 @@
    },
    "outputs": [],
    "source": [
-    "interest_rate_m_s: pd.Series = rate_raw_s.resample('M').median()\n",
+    "interest_rate_m_s: pd.Series = interest_rate_raw_s.resample('M').median()\n",
     "interest_rate_m_s.head()"
    ]
   },
@@ -622,10 +539,6 @@
    "execution_count": null,
    "id": "b23a973d1fe063a8",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.465128Z",
-     "start_time": "2023-11-15T03:09:27.458105Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -657,10 +570,6 @@
    "execution_count": null,
    "id": "26ca0f0562f26e42",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.465399Z",
-     "start_time": "2023-11-15T03:09:27.460259Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -689,10 +598,6 @@
    "execution_count": null,
    "id": "1abcb6e490ef5ed5",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.465530Z",
-     "start_time": "2023-11-15T03:09:27.463526Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -710,10 +615,6 @@
    "execution_count": null,
    "id": "bccc6551e5542ad1",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.467682Z",
-     "start_time": "2023-11-15T03:09:27.465695Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -752,10 +653,6 @@
    "execution_count": null,
    "id": "c3502ccbce7e3ada",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.475023Z",
-     "start_time": "2023-11-15T03:09:27.468494Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -783,10 +680,6 @@
    "execution_count": null,
    "id": "a403ff8ad6b14545",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.476836Z",
-     "start_time": "2023-11-15T03:09:27.475713Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -802,10 +695,6 @@
    "execution_count": null,
    "id": "b8b039be5078d502",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.532643Z",
-     "start_time": "2023-11-15T03:09:27.478051Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -825,28 +714,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db9713272f2287c8",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "source": [
+    "# Write to CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "28ff624bc75a6a50",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-15T03:09:27.532894Z",
-     "start_time": "2023-11-15T03:09:27.525891Z"
-    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "if 'data' in os.listdir():\n",
+    "    shutil.rmtree('data')\n",
+    "os.mkdir('data')\n",
+    "os.mkdir('data/processed')\n",
+    "os.mkdir('data/raw')\n",
+    "gspc_raw_s.to_csv('data/raw/gspc.csv')\n",
+    "cpi_raw_s.to_csv('data/raw/cpi.csv')\n",
+    "interest_rate_raw_s.to_csv('data/raw/interest_rate.csv')\n",
+    "data_df.to_csv('data/processed/data.csv')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
