add new line to column description

--- a/finance_data_clean.ipynb
+++ b/finance_data_clean.ipynb
@@ -637,14 +637,14 @@
    "source": [
     "# Data merging\n",
     "### columns\n",
-    "gspc:                   price of S&P 500 stock index (will be ignored for model)\n",
-    "inflation_rate_pct:     1 year inflation rate (12 months ago to now) (will be a feature)\n",
-    "interest_rate_pct:      interest rate (will be a feature)\n",
-    "inflation_rate_pct_chg: change of inflation between now and 12 months ago (will be a feature)\n",
-    "interest_rate_pct_chg:  change of interest rate between now and 12 months ago (will be a feature)\n",
-    "gspc_prev_year_chg_pct: change of gspc between now and 12 months ago (will be a feature)\n",
-    "gspc_next_year_pct_chg: change of gspc between now and 12 months later (will be used to get target)\n",
-    "target:                 whether gspc increased 12 months later compared to now.\n",
+    "gspc:                   price of S&P 500 stock index (will be ignored for model)\\\n",
+    "inflation_rate_pct:     1 year inflation rate (12 months ago to now) (will be a feature)\\\n",
+    "interest_rate_pct:      interest rate (will be a feature)\\\n",
+    "inflation_rate_pct_chg: change of inflation between now and 12 months ago (will be a feature)\\\n",
+    "interest_rate_pct_chg:  change of interest rate between now and 12 months ago (will be a feature)\\\n",
+    "gspc_prev_year_chg_pct: change of gspc between now and 12 months ago (will be a feature)\\\n",
+    "gspc_next_year_pct_chg: change of gspc between now and 12 months later (will be used to get target)\\\n",
+    "target:                 whether gspc increased 12 months later compared to now\\\n",
     " "
    ]
   },
@@ -673,21 +673,6 @@
     "data_df['target'] = data_df['gspc_next_year_pct_chg'] > 0\n",
     "data_df.index.name = 'date'\n",
     "data_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a403ff8ad6b14545",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "data_df.columns"
    ]
   },
   {
