--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -350,7 +350,11 @@
    "source": [
     "- No NA or missing data in df\n",
     "- One row record the observation for one month.\n",
-    "- The time series data is from 1955-07 to 2022-10, which contains 808 observations."
+    "- The time series data is from 1955-07 to 2022-10, which contains 808 observations.\n",
+    "- The target is True when the stock price went up, and is False when the stock price went down.\n",
+    "- We will use columns 'inflation_rate_pct', 'interest_rate_pct',\n",
+    "       'inflation_rate_pct_chg', 'interest_rate_pct_chg',\n",
+    "       'gspc_prev_year_pct_chg' as features, and the target as response in this binary classification problem. "
    ]
   },
   {
