--- a/report.ipynb
+++ b/report.ipynb
@@ -5,7 +5,9 @@
    "id": "cc239d83-d0e2-41dc-a8fa-b21e88cd0cd8",
    "metadata": {},
    "source": [
-    "# Report starts from here - this is to test git"
+    "### Predicting whether S&P 500 will grow or drop one year from now\n",
+    "\n",
+    "by Allan Lee, Jianhao Zhang, Yi Yan & Chengyu Tao 2023/11"
    ]
   },
   {
@@ -21,6 +23,41 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82b52622-cb35-4728-8005-98b7c9e80137",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Summary\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Introduction\n",
+    "\n",
+    "During the COVID-19 pandemic, central banks around the world lowered interest rates to ease economical challenges posed by the pandemic. As the pandemic ease, the lowered interest rate leads to excess consumer spending which increased the inflation rate to unacceptable levels. In order to control the inflation and have it return to pre-pandemic levels, the central bank raised the interest rate sharply to the highest level in 15 years. Nowadays, inflation and interest rate often takes the headline of financial news and with more than 50% of American households own stocks, our team is curious to find out how inflation and interest rate affect stock returns.\n",
+    "\n",
+    "# Methods\n",
+    "\n",
+    "## Data\n",
+    "\n",
+    "1. We decided to use the Standard & Poors 500 Index (S&P500) as stock market proxy. The index tracks stocks of 500 largest companies in USA.\n",
+    "2. To obtain inflation, we simpy calculate the change of consumer price index (CPI).\n",
+    "3. We can use the Federal funds rate as proxy for interest rate. It is the target interest rate set by the Federal reserve for commercial banks to lend and borrow overnight.\n",
+    "\n",
+    "## Key Question\n",
+    "\n",
+    "How does interest rate and inflation affect stock market return for 1 year?\n",
+    "In other words, given inflation and interest rate data, can I predict whether I will profit if I invest in the S&P500 index and hold for 1 year.\n",
+    "\n",
+    "## Results & Discussion\n",
+    "\n",
+    "We built and trained a logistic regression model with data from 1955-07-31 to 2022-10-31. Our \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -376,7 +413,9 @@
   {
    "cell_type": "markdown",
    "id": "601d671a-f86d-4f28-a968-de8f7c19947b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Split data and EDA"
    ]
