--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis of Finanical Data \n",
+    "_We analyzed the stock price data and provided a exploratory data analysis._\n",
+    "\n",
+    "Data source: Yahoo Finance\n",
+    "\n",
+    "by Allan Lee, Jianhao Zhang, Yi Yan and Chengyu Tao (DSCI 522 Group 3 Milestone 1)\n",
+    "\n",
+    "2023/11/17"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "858e1262-f863-4eac-bafb-24f8d4599a0a",
@@ -348,13 +362,11 @@
    "id": "662a2066-4dd6-4b8c-9840-7543be22383f",
    "metadata": {},
    "source": [
-    "- No NA or missing data in df\n",
-    "- One row record the observation for one month.\n",
-    "- The time series data is from 1955-07 to 2022-10, which contains 808 observations.\n",
-    "- The target is True when the stock price went up, and is False when the stock price went down.\n",
-    "- We will use four columns 'inflation_rate_pct', 'interest_rate_pct',\n",
-    "       'inflation_rate_pct_chg', 'interest_rate_pct_chg',\n",
-    "       'gspc_prev_year_pct_chg' as features, and the target as response in this binary classification problem. "
+    "- The dataframe (df) is devoid of NA or missing data.\n",
+    "- Each row corresponds to observations for a single month.\n",
+    "- The time series data spans from July 1955 to October 2022, encompassing a total of 808 observations.\n",
+    "- The target variable is labeled as True when the stock price increased and False when it decreased.\n",
+    "- For this binary classification problem, we will utilize the following five columns as features: 'inflation_rate_pct', 'interest_rate_pct', 'inflation_rate_pct_chg', 'interest_rate_pct_chg', 'gspc_prev_year_pct_chg,' with the target variable serving as the response."
    ]
   },
   {
@@ -786,13 +798,6 @@
    ],
    "source": [
     "train_df.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We don't consider column 'gspc' and 'gspc_next_year_pct_chg' in EDA, because these two columns are used to calculated other columns. "
    ]
   },
   {
@@ -1259,12 +1264,11 @@
    "id": "c94da264-288b-41b4-a5dc-b1fa7bcbc0fd",
    "metadata": {},
    "source": [
-    "- Examine the data type for every column.\n",
-    "- Illustrate the distribution of all numeric columns and investigate possible correlations between them.\n",
-    "- Divide the dataframe into training and testing datasets with an 80:20 ratio.\n",
-    "- Based on the histograms of all columns, the four numerical columns 'inflation_rate_pct', 'interest_rate_pct', 'inflation_rate_pct_chg', 'interest_rate_pct_chg', and 'gspc_prev_year_pct_chg' are helpful in separating the target.\n",
-    "\n",
-    "-  **Comments for ML pipe construction**: we have one data point per month. "
+    "- Assess the data type of each column.\n",
+    "- Display the distribution of all numerical columns and explore potential correlations among them.\n",
+    "- Split the dataframe into training and testing sets, maintaining an 80:20 ratio.\n",
+    "- Observing the histograms of all columns, it is evident that the five numerical columns ('inflation_rate_pct', 'interest_rate_pct', 'inflation_rate_pct_chg', 'interest_rate_pct_chg', and 'gspc_prev_year_pct_chg') are valuable in discerning the target.\n",
+    "- Each month represents a single data point."
    ]
   },
   {
