update report data section

--- a/report.ipynb
+++ b/report.ipynb
@@ -47,15 +47,22 @@
     "1. We decided to use the Standard & Poors 500 Index (S&P500) as stock market proxy. The index tracks stocks of 500 largest companies in USA.\n",
     "2. To obtain inflation, we simpy calculate the change of consumer price index (CPI).\n",
     "3. We can use the Federal funds rate as proxy for interest rate. It is the target interest rate set by the Federal reserve for commercial banks to lend and borrow overnight.\n",
+    "4. Therefore, each of the rows in our processed dataframe represents a single record that describes the economical status worold-wide from a high-level prospective.\n",
+    "\n",
+    "To get a better understanding of the data that would be used for training and testing purpose, we visualizes each of the features for two categories: 1. the year of record that foresees an increase in S&P500.\n",
     "\n",
     "## Key Question\n",
     "\n",
     "How does interest rate and inflation affect stock market return for 1 year?\n",
     "In other words, given inflation and interest rate data, can I predict whether I will profit if I invest in the S&P500 index and hold for 1 year.\n",
     "\n",
+    "## Analysis\n",
+    "\n",
+    "\n",
+    "\n",
     "## Results & Discussion\n",
     "\n",
-    "We built and trained a logistic regression model with data from 1955-07-31 to 2022-10-31. Our \n",
+    "We built and trained a logistic regression model with data from 1955-07-31 to 2022-10-31. \n",
     "\n",
     "\n"
    ]
