add data descriptions

--- a/report.ipynb
+++ b/report.ipynb
@@ -26,6 +26,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "106952ea-23a7-414c-ae63-6b3c0466c7b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip show matplotlib"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "82b52622-cb35-4728-8005-98b7c9e80137",
    "metadata": {
@@ -44,25 +54,24 @@
     "\n",
     "## Data\n",
     "\n",
-    "1. We decided to use the Standard & Poors 500 Index (S&P500) as stock market proxy. The index tracks stocks of 500 largest companies in USA.\n",
-    "2. To obtain inflation, we simpy calculate the change of consumer price index (CPI).\n",
-    "3. We can use the Federal funds rate as proxy for interest rate. It is the target interest rate set by the Federal reserve for commercial banks to lend and borrow overnight.\n",
-    "4. Therefore, each of the rows in our processed dataframe represents a single record that describes the economical status worold-wide from a high-level prospective.\n",
+    "1. **S&P500 Index**: We decided to use the Standard & Poors 500 Index (S&P500) as stock market proxy. The index tracks stocks of 500 largest companies in USA. Data sourced from Yahoo Finance.\n",
+    "2. **Inflation Data**: To obtain inflation, we simpy calculate the change of consumer price index (CPI).\n",
+    "3. **Interest Rate**: We can use the Federal funds rate as proxy for interest rate. It is the target interest rate set by the Federal reserve for commercial banks to lend and borrow overnight.\n",
     "\n",
-    "To get a better understanding of the data that would be used for training and testing purpose, we visualizes each of the features for two categories: 1. the year of record that foresees an increase in S&P500.\n",
+    "## Remarks\n",
+    "\n",
+    "### Resampling\n",
+    "\n",
+    "S&P500 index, CPI, and Interest rate data we obtained have different sampling frequencies. CPI data has the lowest frequency and it is sampled every first day of the month. We decided to resample all data to last day of every month thus it is easy to calculate and interpret year-year and month-month change. Interest rate data was sampled daily and it is noisy. We decided to filter the data by taking monthly median during resampling. The following table summarizes how data preprocessing was done.\n",
     "\n",
     "## Key Question\n",
     "\n",
     "How does interest rate and inflation affect stock market return for 1 year?\n",
     "In other words, given inflation and interest rate data, can I predict whether I will profit if I invest in the S&P500 index and hold for 1 year.\n",
     "\n",
-    "## Analysis\n",
-    "\n",
-    "\n",
-    "\n",
     "## Results & Discussion\n",
     "\n",
-    "We built and trained a logistic regression model with data from 1955-07-31 to 2022-10-31. \n",
+    "We built and trained a logistic regression model with data from 1955-07-31 to 2022-10-31. Our \n",
     "\n",
     "\n"
    ]
