add EDA and model to the notebook

--- a/src/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/src/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -2,41 +2,92 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Predicting direction of stock price from interest rate and inflation rate"
-   ],
+   "id": "3d1f90cb45bbbc67",
    "metadata": {
     "collapsed": false
    },
-   "id": "3d1f90cb45bbbc67"
+   "source": [
+    "# Predicting direction of stock price from interest rate and inflation rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "_We utilized logistic regression to analyze the stock price data and provided a predictive model._\n",
+    "\n",
+    "Data source: Yahoo Finance\n",
+    "\n",
+    "by Allan Lee, Jianhao Zhang, Yi Yan and Chengyu Tao (DSCI 522 Group 3 Milestone 1)\n",
+    "\n",
+    "2023/11/17"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f166af3ef293f4f",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "import altair as alt\n",
     "alt.data_transformers.enable(\"vegafusion\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6f166af3ef293f4f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import classification_report\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "7981ce5d4e8beff8",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Summary"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7981ce5d4e8beff8"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "b2f951a7cc0ff71d",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Introduction\n",
     "\n",
@@ -60,23 +111,19 @@
     "| CPI           | first day of every month                        | Offset the date by 1 to last day of last month. We thought the value difference for 1 day is neglegible |\n",
     "| Interest Rate | daily | Resample to the last day of month by taking the median price of for every day of the month to filter for noise |\n",
     " \n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b2f951a7cc0ff71d"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "6fffc5adabc6040f",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Results & Discussion\n",
     "\n",
     "### Read Data From Web"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6fffc5adabc6040f"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -635,6 +682,389 @@
     " .repeat(row=['gspc', 'inflation_rate_pct', 'interest_rate_pct', 'inflation_rate_pct_chg',\n",
     "              'interest_rate_pct_chg', 'gspc_prev_year_pct_chg', 'gspc_next_year_pct_chg',\n",
     "              'target']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../Data/Processed/data.csv\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Column data types \n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- No NA or missing data in df\n",
+    "- One row record the observation for one month.\n",
+    "- The time series data is from 1955-07 to 2022-10, which contains 808 observations.\n",
+    "- The target is True when the stock price went up, and is False when the stock price went down.\n",
+    "- We will use four columns 'inflation_rate_pct', 'interest_rate_pct',\n",
+    "       'inflation_rate_pct_chg', 'interest_rate_pct_chg',\n",
+    "       'gspc_prev_year_pct_chg' as features, and the target as response in this binary classification problem. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split data and EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split data into training and test\n",
+    "train_df, test_df = train_test_split(df, test_size=0.2, random_state=123)\n",
+    "train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# statistical summary for dataframe\n",
+    "train_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "features = ['inflation_rate_pct', 'interest_rate_pct',\n",
+    "       'inflation_rate_pct_chg', 'interest_rate_pct_chg',\n",
+    "       'gspc_prev_year_pct_chg']\n",
+    "\n",
+    "for feat in features:\n",
+    "    train_df.groupby(\"target\")[feat].plot.hist(bins=50, alpha=0.5, legend=True, density=True, title=\"Histogram of \" + feat)\n",
+    "    plt.xlabel(feat)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# finding potential correlation between numeric columns\n",
+    "num_col = train_df.select_dtypes(include=['float64']).columns.tolist()\n",
+    "\n",
+    "train_df[num_col].corr('spearman').style.background_gradient()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Spearmean's rank correlation test revealed some potential correlation between columns: \n",
+    "\n",
+    "**interest_rate_pct vs inflation_rate_pct** \n",
+    "\n",
+    "**interest_rate_pct_chg vs inflation_rate_pct_chg**\n",
+    "\n",
+    "**inflation_rate_pct_chg vs inflation_rate_pct**\n",
+    "\n",
+    "**interest_rate_pct_chg vs interest_rate_pct**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "plt.scatter(train_df['interest_rate_pct'], train_df['inflation_rate_pct'], s=20, c='blue', alpha=0.7)\n",
+    "\n",
+    "plt.title('Scatter Plot of Interest Rate vs Inflation Rate')\n",
+    "plt.xlabel('Interest Rate (%)')\n",
+    "plt.ylabel('Inflation Rate (%)')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "plt.scatter(train_df['interest_rate_pct_chg'], train_df['inflation_rate_pct_chg'], s=20, c='green', alpha=0.7)\n",
+    "\n",
+    "plt.title('Scatter Plot of Interest Rate Change vs Inflation Rate Change')\n",
+    "plt.xlabel('Interest Rate Change (%)')\n",
+    "plt.ylabel('Inflation Rate Change (%)')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "plt.scatter(train_df['inflation_rate_pct_chg'], train_df['inflation_rate_pct'], s=20, c='red', alpha=0.7)\n",
+    "\n",
+    "plt.title('Scatter Plot of Inflation Rate Change vs Inflation Rate')\n",
+    "plt.xlabel('Inflation Rate Change (%)')\n",
+    "plt.ylabel('Inflation Rate (%)')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "plt.scatter(train_df['interest_rate_pct_chg'], train_df['interest_rate_pct'], s=20, c='blue', alpha=0.7)\n",
+    "\n",
+    "plt.title('Scatter Plot of Interest Rate Change vs Interest Rate')\n",
+    "plt.xlabel('Interest Rate Change (%)')\n",
+    "plt.ylabel('Interest Rate (%)')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Examine the data type for every column.\n",
+    "- Illustrate the distribution of all numeric columns and investigate possible correlations between them.\n",
+    "- Divide the dataframe into training and testing datasets with an 80:20 ratio.\n",
+    "- Based on the histograms of all columns, the five numerical columns 'inflation_rate_pct', 'interest_rate_pct', 'inflation_rate_pct_chg', 'interest_rate_pct_chg', and 'gspc_prev_year_pct_chg' are helpful in separating the target."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df, test_df = train_test_split(df, test_size=0.2, random_state=123)\n",
+    "train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Separate target value form train and test set \n",
+    "X_train = train_df[['inflation_rate_pct', 'interest_rate_pct',\n",
+    "       'inflation_rate_pct_chg', 'interest_rate_pct_chg',\n",
+    "       'gspc_prev_year_pct_chg']]\n",
+    "y_train = train_df[\"target\"]\n",
+    "\n",
+    "X_test = test_df[['inflation_rate_pct', 'interest_rate_pct',\n",
+    "       'inflation_rate_pct_chg', 'interest_rate_pct_chg',\n",
+    "       'gspc_prev_year_pct_chg']]\n",
+    "y_test = test_df[\"target\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data\n",
+    "The dataset comprises records for 808 months, with each row featuring a crucial predictor for the corresponding month. Additionally, it indicates whether there was an increase or decrease in the S&P 500 index, denoted by the values True or False.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Preprocessing Data\n",
+    "\n",
+    "##### Numeric features:\n",
+    "- 'inflation_rate_pct'\n",
+    "- 'interest_rate_pct'\n",
+    "- 'inflation_rate_pct_chg'\n",
+    "- 'interest_rate_pct_chg'\n",
+    "- 'gspc_prev_year_pct_chg'\n",
+    "\n",
+    "Since there is no missing values, imputation is not necessary. And we apply a StandardScaler."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_features = ['inflation_rate_pct', 'interest_rate_pct',\n",
+    "       'inflation_rate_pct_chg', 'interest_rate_pct_chg',\n",
+    "       'gspc_prev_year_pct_chg']\n",
+    "\n",
+    "#Create Column Transformer \n",
+    "preprocessor = make_column_transformer(    \n",
+    "    (StandardScaler(), numerical_features),  \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model Selection\n",
+    "##### Logistic Regression\n",
+    "Our focus is on identifying whether there is an increase in the S&P 500 index, making it a classification problem. To tackle this, we utilize Logistic Regression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = make_pipeline(preprocessor, LogisticRegression())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test data of logistic regression yields an accuracy of 75.3%. Accuracy is a metric calculated as the ratio of correct predictions to all predictions. Nevertheless, caution is necessary when interpreting this metric, particularly in the context of class imbalance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Dummy Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "dc = DummyClassifier()\n",
+    "dc.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dc.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test data of dummy regression yields an accuracy of 75.9%. The accuracy of dummy regression is better then the accuracy of logistic regression. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "In the preceding examination, we utilize `Logistic Regression` and `Dummy Regression`. Consequently, the result is not promising. Further data preprocessing is needed to enhance the overall effectiveness of the model."
    ]
   }
  ],
