Revert "update html and container.jpg"
This reverts commit 52fce35b0e9a91dce902a758644bac98fb722f05.

--- a/src/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/src/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -30,10 +30,7 @@
      "end_time": "2023-11-23T03:35:10.185844Z",
      "start_time": "2023-11-23T03:35:10.149061Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -186,10 +183,7 @@
      "end_time": "2023-11-23T03:35:10.908992Z",
      "start_time": "2023-11-23T03:35:10.157770Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -205,10 +199,7 @@
      "end_time": "2023-11-23T03:35:10.914319Z",
      "start_time": "2023-11-23T03:35:10.910915Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -357,10 +348,7 @@
      "end_time": "2023-11-23T03:35:10.918977Z",
      "start_time": "2023-11-23T03:35:10.916262Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -518,10 +506,7 @@
      "end_time": "2023-11-23T03:35:11.007064Z",
      "start_time": "2023-11-23T03:35:10.920365Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1128,7 +1113,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "35a83463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1124,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cca39f32",
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1448,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b44bfef6",
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
