--- a/src/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/src/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -16,9 +16,9 @@
     "\n",
     "_We utilized logistic regression to analyze the stock price data and provided a predictive model._\n",
     "\n",
-    "by Allan Lee, Jianhao Zhang, Yi Yan and Chengyu Tao (DSCI 522 Group 3 Milestone 1)\n",
+    "by Allan Lee, Jianhao Zhang, Yi Yan and Chengyu Tao (DSCI 522 Group 3 Milestone 2)\n",
     "\n",
-    "2023/11/17"
+    "2023/11/24"
    ]
   },
   {
@@ -30,7 +30,10 @@
      "end_time": "2023-11-23T03:35:10.185844Z",
      "start_time": "2023-11-23T03:35:10.149061Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -183,7 +186,10 @@
      "end_time": "2023-11-23T03:35:10.908992Z",
      "start_time": "2023-11-23T03:35:10.157770Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -199,7 +205,10 @@
      "end_time": "2023-11-23T03:35:10.914319Z",
      "start_time": "2023-11-23T03:35:10.910915Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -348,7 +357,10 @@
      "end_time": "2023-11-23T03:35:10.918977Z",
      "start_time": "2023-11-23T03:35:10.916262Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -506,7 +518,10 @@
      "end_time": "2023-11-23T03:35:11.007064Z",
      "start_time": "2023-11-23T03:35:10.920365Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1113,6 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "42584774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,6 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "a74d9594",
    "metadata": {},
    "outputs": [
     {
@@ -1448,6 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "d3c1bc9f",
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
